# treeclick

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/treeclick/: __init__.py  cli.py  core.py  custom_group.py  strip_tree_guides.py
src/treeclick/commands/: info.py
src/treeclick/groups/: manage.py  permissions.py  project.py  set_permissions.py  user.py
tests/: test_cli.py  test_custom_group.py  test_tree_group.py
