[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "treeclick"
version = "0.1.1"
description = "A Click extension for tree-formatted help"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    "ruff",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=treeclick --cov-report=term-missing --cov-report=html"

